fix: add trick to set height on mobile

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,12 +4,18 @@
   max-width: 1800px;
   margin: 0 auto;
   height: 100vh;
-  max-height: 100vh;
+  max-height: 90vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 1em;
   overflow: hidden;
+}
+
+@media (min-width: 768px) {
+  .content {
+    max-height: 100vh;
+  }
 }
 
 .main {
