--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -6,7 +6,7 @@
   top: 0;
   right: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   backdrop-filter: blur(2px);
   z-index: 1;
   overflow: hidden;
